# cloudmatica

./: .gitignore  LICENSE  README.md  build.sh  deploy-testpypi.sh  index.html  privacy-policy.html  privacy-policy.odt  setup.cfg
p/: importcsv.html  index.html  package-lock.json  package.json  spreadsheet.html
src/cloudmatica/: __init__.py  __main__.py
tests/: test_cloudmatica.py
