[metadata]
name = cloudmatica
version = 0.0.6
author = Vijay Balasubramaniam
author_email = vbalasu@gmail.com
description = Cloudmatica suite of tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vbalasu/cloudmatica
project_urls =
    Bug Tracker = https://github.com/vbalasu/cloudmatica/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    cloudmatica = cloudmatica:main